Page Loading Issues - Fixed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -701,7 +701,7 @@
 				</section>
 				<!-- section end -->
 				<section class="parallax-section" data-scrollax-parent="true">
-					<div class="bg page-section-ptb bg text-white bg-overlay-black-50" data-bg="asstes/images/bg/bg-5.jpg" data-scrollax="properties: { translateY: '100px' }"></div>
+					<div class="bg page-section-ptb bg text-white bg-overlay-black-50" data-bg="assets/images/bg/bg-5.jpg" data-scrollax="properties: { translateY: '100px' }"></div>
 					<div class="container">
 						<div class="row justify-content-center">
 							<div class="col-md-8 text-center text-white">
@@ -941,3 +941,4 @@
 		</a>
 		</div>
 		<!-- Main end -->
+		
