Fixed home Issues & Register page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- Main -->
 <div id="main">
 		<!--================================= header -->
-		<header id="header" class="defualt">
+		<header id="header" class="defualt dark">
 			<div class="topbar">
 				<div class="container">
 					<div class="row">
@@ -306,40 +306,12 @@
 									</form>
 									<div class="lost_password"> <a href="#">Lost Your Password?</a>
 									</div>
-								</div>
-							</div>
-							<!--tab end -->
-							<!--tab -->
-							<div class="tab">
-								<div id="tab-2" class="tab-content">
-									<h3>Sign Up
-      <span>Easy<strong>Book</strong></span></h3>
-									<div class="custom-form">
-										<form method="post" name="registerform" class="main-register-form" id="main-register-form2">
-											<label>Full Name <span>*</span>
-											</label>
-											<input name="name" type="text" onclick="this.select()" value="">
-											<label>Email Address <span>*</span>
-											</label>
-											<input name="email" type="text" onclick="this.select()" value="">
-											<label>Password <span>*</span>
-											</label>
-											<input name="password" type="password" onclick="this.select()" value="">
-											<button type="submit" class="log-submit-btn color-bg"> <span>Register</span>
-											</button>
-										</form>
-									</div>
+									<!-- <button type="submit" class="log-submit-btn color-bg"> <span>Register</span></button> -->
 								</div>
 							</div>
 							<!--tab end -->
 						</div>
 						<!--tabs end -->
-						<div class="log-separator fl-wrap"> <span>or</span>
-						</div>
-						<div class="soc-log fl-wrap">
-							<p>For faster login or register use your social account.</p>
-							<a href="#" class="facebook-log"> <i class="fab fa-facebook-f"></i>Connect with Facebook</a>
-						</div>
 					</div>
 				</div>
 			</div>
