--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">Home</mat-toolbar>
+<!-- <mat-toolbar color="primary">Home</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item href="#">Form controls</a>
       <a mat-list-item href="#">Navigation</a>
@@ -6,4 +6,46 @@
       <a mat-list-item href="#">Buttons and Indicators</a>
       <a mat-list-item href="#">Popups & Modals</a>
       <a mat-list-item href="#">Data table</a>
-    </mat-nav-list>
+    </mat-nav-list> -->
+
+<!--=================================banner -->
+ <section class="inner-intro bg bg-fixed bg-overlay-black-60" style="background-image:url(assets/images/bg/14.jpg);">
+                        <div class="container">
+                            <div class="flat-title-wrap">
+                                <h2><span>Account details</span></h2>
+                                <span class="section-separator"></span>
+                                <h4>Welcome! Let's start your partner search with this Sign up.
+                                </h4>
+                            </div>
+                        </div>
+                    </section>
+
+<!--================================= banner -->
+<!-- wrapper -->
+<div id="wrapper" class="home-wrap">
+  <!-- content-->
+  <div class="content">
+    <section class="grey-blue-bg small-padding" id="sec1">
+      <div class="container">
+        <div class="row">
+          <!--listing -->
+          <div class="col-md-12">
+            <div class="list-single-main-item fl-wrap no-mar-bottom ">
+                <!-- <mat-form-field class="example-full-width">
+                    <input matInput placeholder="Favorite food" value="Sushi">
+                  </mat-form-field>
+                
+                  <mat-form-field class="example-full-width">
+                    <textarea matInput placeholder="Leave a comment"></textarea>
+                  </mat-form-field> -->
+          </div>
+          </div>
+          <!--listing end-->
+        </div>
+        <!--row end-->
+      </div>
+    </section>
+  </div>
+  <!-- content end-->
+</div>
+<!--wrapper end -->
