Home page slider issues fixed & Register page WHY REGISTER updated

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,16 +9,16 @@
     </mat-nav-list> -->
 
 <!--=================================banner -->
- <section class="inner-intro bg bg-fixed bg-overlay-black-60" style="background-image:url(assets/images/bg/14.jpg);">
-                        <div class="container">
-                            <div class="flat-title-wrap">
-                                <h2><span>Account details</span></h2>
-                                <span class="section-separator"></span>
-                                <h4>Welcome! Let's start your partner search with this Sign up.
-                                </h4>
-                            </div>
-                        </div>
-                    </section>
+<section class="inner-intro bg bg-fixed bg-overlay-black-60" style="background-image:url(assets/images/bg/14.jpg);">
+  <div class="container">
+    <div class="flat-title-wrap">
+      <h2><span>Account details</span></h2>
+      <span class="section-separator"></span>
+      <h4>Welcome! Let's start your partner search with this Sign up.
+      </h4>
+    </div>
+  </div>
+</section>
 
 <!--================================= banner -->
 <!-- wrapper -->
@@ -29,18 +29,48 @@
       <div class="container">
         <div class="row">
           <!--listing -->
-          <div class="col-md-12">
+          <div class="col-md-10">
             <div class="list-single-main-item fl-wrap no-mar-bottom ">
-                <!-- <mat-form-field class="example-full-width">
+              <!-- <mat-form-field class="example-full-width">
                     <input matInput placeholder="Favorite food" value="Sushi">
                   </mat-form-field>
                 
                   <mat-form-field class="example-full-width">
                     <textarea matInput placeholder="Leave a comment"></textarea>
                   </mat-form-field> -->
+            </div>
           </div>
+          <div class="col-md-2">
+            <div class="box-widget-item fl-wrap whyRegister">
+              <div class="box-widget">
+                <div class="box-widget-content">
+                  <div class="box-widget-item-header">
+                    <h3> WHY REGISTER </h3>
+                  </div>
+                  <ul class="listing">
+                    <li>
+                      <img src="assets/images/icons/002-tasks.svg" alt="" />
+                      <p>Lakhs of Genuine Profiles</p>
+                    </li>
+                    <li>
+                      <img src="assets/images/icons/003-hired.svg" alt="" />
+                      <p>Many Verified by Personal Visit</p>
+                    </li>
+                    <li>
+                      <img src="assets/images/icons/005-team.svg" alt="" />
+                      <p>Secure & 
+                          Family Friendly</p>
+                    </li>
+                    <li>
+                      <img src="assets/images/icons/008-protected-profile.svg" alt="" />
+                      <p>Strict 
+                          Privacy Control</p>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
-          <!--listing end-->
         </div>
         <!--row end-->
       </div>
