--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -79,27 +79,90 @@
   <!-- content end-->
 </div>
 <!--wrapper end -->
-<md-card>
-  <md-card-title>Connection</md-card-title>
-  <md-card-content>
-    <form [formGroup]="loginForm">
-      <md-input-container [ngClass]="{'error': loginForm.controls['email'].errors && !loginForm.controls['email'].pristine}" dividerColor="{{loginForm.controls['email'].errors && !loginForm.controls['email'].pristine ? 'warn' : 'primary'}}">
-        <input type="email" mdInput formControlName="email" placeholder="Email" required>
-        <div *ngIf="loginForm.controls['email'].errors && !loginForm.controls['email'].pristine" class="error-msg">
-          <div [hidden]="!loginForm.controls['email'].errors.required">Email is required.</div>
-          <div [hidden]="!loginForm.controls['email'].errors.patternInvalid">Email is invalid.</div>
-        </div>
-      </md-input-container>
-      <md-input-container [ngClass]="{'error': loginForm.controls['password'].errors && !loginForm.controls['password'].pristine}"
-        dividerColor="{{loginForm.controls['password'].errors && !loginForm.controls['password'].pristine ? 'warn' : 'primary'}}">
-        <input type="password" mdInput formControlName="password" placeholder="Password" required>
-        <div *ngIf="loginForm.controls['password'].errors && !loginForm.controls['password'].pristine" class="error-msg">
-          <div [hidden]="!loginForm.controls['password'].errors.required">Password is required.</div>
-        </div>
-      </md-input-container>
-    </form>
-  </md-card-content>
-  <md-card-actions align="end">
-    <button md-raised-button class="btn" [disabled]="loginForm.invalid" (click)="login()">Login</button>
-  </md-card-actions>
-</md-card>
+
+<mat-toolbar color="accent">    
+  <span>Manav Pandya - C#Corner</span>    
+  <span class="demo-toolbar"></span>    
+  <button mat-button href="asp-dotnet-mvc-tutorials.blogspot.in">Go To My Blog</button>    
+  
+</mat-toolbar>    
+  
+<mat-card>    
+  <!-- Title of an Card -->    
+  <mat-card-title>    
+      Angular Material Component With Angular 5    
+  </mat-card-title>    
+  
+  <mat-card-content>    
+      <form>    
+          <table>    
+              <tr>    
+                  <td>    
+                      <mat-form-field class="demo-full-width">    
+                          <input matInput placeholder="First Name">    
+                      </mat-form-field>    
+                  </td>    
+                  <td>    
+                      <mat-form-field class="demo-full-width">    
+                          <input matInput placeholder="Last Name">    
+                      </mat-form-field>    
+                  </td>    
+              </tr>    
+              <tr>    
+                  <td colspan="2">    
+                      <mat-form-field class="demo-full-width">    
+                          <textarea matInput placeholder="Address" matTextareaAutosize matAutosizeMinRows="2" matAutosizeMaxRows="5"></textarea>    
+                      </mat-form-field>    
+                  </td>    
+              </tr>    
+              <tr>    
+                  <td colspan="2">    
+                      <mat-form-field class="demo-full-width">    
+                          <input matInput [matDatepicker]="picker" placeholder="Date of birth">    
+                          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>    
+                          <mat-datepicker touchUi="true" #picker></mat-datepicker>    
+                      </mat-form-field>    
+                  </td>    
+              </tr>    
+              <tr>    
+                  <td>    
+                      <span>Gender</span><br><br>    
+                      <mat-radio-group>    
+                          <mat-radio-button value="1">Male</mat-radio-button>    
+                          <mat-radio-button value="2">Female</mat-radio-button>    
+                      </mat-radio-group>    
+                  </td>    
+                  <td><br>    
+                      <mat-form-field>    
+                          <mat-select placeholder="Select Blog" [(value)]="selected">    
+                              <mat-option>-- Select Any --</mat-option>    
+                              <mat-option value="1">C#Corner</mat-option>    
+                              <mat-option value="2">C#Corner</mat-option>    
+                              <mat-option value="3">C#Corner</mat-option>    
+                          </mat-select>    
+                      </mat-form-field>    
+                  </td>    
+              </tr>    
+              <tr>    
+                  <td colspan="2">    
+                      <mat-form-field class="demo-full-width">    
+                          <input matInput placeholder="Email">    
+                      </mat-form-field>    
+                  </td>    
+              </tr>    
+              <tr>    
+                  <td colspan="2">    
+  
+                  </td>    
+              </tr>    
+              <tr>    
+                  <td colspan="2" class="content-center">    
+                      <button mat-raised-button color="accent">Submit</button>    
+                      <button mat-raised-button color="accent">Clear</button>    
+                  </td>    
+              </tr>    
+          </table>    
+      </form>    
+  </mat-card-content>    
+</mat-card>   
+  
