--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -1,5 +1,5 @@
 @import '~https://fonts.googleapis.com/icon?family=Material+Icons';    
-@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';    
+/* @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';     */
 .mat-card {    
     text-align: -webkit-center;    
 }    
@@ -45,3 +45,14 @@ mat-toolbar-row {
 .content-center {    
     text-align: -webkit-center;    
 }  
+.mat-form-field {
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.125;
+    font-family: Roboto,"Helvetica Neue",sans-serif;
+    color: #333;
+}
+.mat-form-field{width: 100%;}
+.mat-radio-group{
+padding-bottom: 1.25em;}
+.mat-radio-group label{font-size: 14px;width:100%;font-weight: 500;text-align: left;}
